# drone_demo

./: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake  compile-native-linux.sh  mainpage.dox  manifest.xml
ardrone/: aruco.py  native.py
ardrone/native/lib/: libaruco.so.1.0.0
ardrone/native/lib/cmake/: Findaruco.cmake
aruco-test/: aruco.py  aruco_marker_distance.py  aruco_marker_distance.py~
msg_gen/cpp/include/drone_demo/: Navdata.h
msg_gen/lisp/: Navdata.lisp  _package.lisp  _package_Navdata.lisp  drone_demo-msg.asd
native/: CMakeLists.txt  libp264.sln  mingw-toolchain.cmake
native/caruco/: board.cpp  camera_parameters.cpp  caruco.h  error_handling.cpp
native/libp264/: CMakeLists.txt  libp264.c  p264.h
native/libp264/VP_Os/: vp_os_types.h
src/: alti_impulse_test.py  drone_controller.py  drone_demo.py  drone_test.py  image_conv_processor.py  image_processor_lead.py  lead_ctrler.py  simple_im_proc.py  simplelead.py
src/drone_demo/msg/: _Navdata.py
src/drone_demo/srv/: _CamSelect.py  _HullSelect.py  _LedAnim.py
srv_gen/cpp/include/drone_demo/: CamSelect.h  HullSelect.h  LedAnim.h
srv_gen/lisp/: CamSelect.lisp  HullSelect.lisp  LedAnim.lisp  _package.lisp  _package_CamSelect.lisp  _package_HullSelect.lisp  _package_LedAnim.lisp  drone_demo-srv.asd
